Fix (pdfwrite) : Write ToUnicode CMaps with 2-byte code space ranges and keys

Details
Bug #690722 "Problem with the font embedding logic"

The existing ToUnicode CMap code wrote a ToUnicode CMap the same as a regular CMap, so
the code space ranges and keys could be arbitrary lengths depending on the number
of codes and their values. This appeared to be correct per the PDF Reference and the
CMap specification.

However, buried in technical note 5411, the 'ToUnicode Mapping File Tutorial' is a
single reference:

"the following “codespacerange” definition, without exception, shall always be
used: 1 begincodespacerange  <0000> <FFFF>endcodespacerange"

This means that ToUnicode CMaps must be treated specially to ensure that they always
have 2 byte code space ranges and keys.

Modified the single allocation of ToUnicode CMaps so that it always specifies a 2
byte range.

Expected Differences
None.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@10018 a1074d23-0009-0410-80fe-cf8c14f379e6